# rusty_graph

./: .gitignore  Cargo.toml  playground.py  pyproject.toml  setup.py
.github/workflows/: CI.yml
peasants/: notes.md
peasants/data-grpc/: Cargo.toml  README.md  build.rs
peasants/data-grpc/proto/: Makefile  data.proto
peasants/data-grpc/src/: data_pb2.py  data_pb2_grpc.py  dataclient.py  dataclient.rs  dataserver.py
peasants/data-grpc/src/react-data-viewer/: envoy.yaml  package-lock.json  package.json
peasants/data-grpc/src/react-data-viewer/src/: App.js  client.js  data_grpc_web_pb.js  data_pb.js
peasants/hello-rust/: Cargo.toml
peasants/hello-rust/src/: main.rs
rusty_graph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: lib.rs
src/rusty_graph/: __init__.py  graph.py  lib.rs  rg.rs
src/rusty_graph.egg-info/: SOURCES.txt  top_level.txt
src/rusty_graph/rg_app/: main.py
src/rusty_graph/rg_app/static/css/: styles.css
src/rusty_graph/rg_app/templates/: index.html
