[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.maturin]
python-source = "src/rusty_graph"

[project]
name = "rusty_graph"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython"
]